--- a/css/creative.css
+++ b/css/creative.css
@@ -228,6 +228,7 @@ header .header-content .header-content-inner p {
   display: block;
   max-width: 650px;
   margin: 0 auto;
+  cursor: pointer;
 }
 .portfolio-box .portfolio-box-caption {
   color: white;
